src/test/resources/testinput/parsable/symtab/invalid_coco/Test07.ocl
/* (c) https://github.com/MontiCore/monticore */
package invariants;

ocl Test07 {
  inv(Optional<Integer> a, int b):
    a ?: 5 == b &&
    a ?> b &&
    a ?>= b &&
    a ?< b &&
    a ?<= b &&
    a ?== b &&
    a ?!= b;
}
